# RacingTeam

PPC/: documentation.html
PPC/Assignment 1/: assignment1.py
PPC/Assignment 2/: Cubic spline.py  Gaussian.py  lin_spline.py
PPC/Assignment 3/: drone.py
PPC/Assignment 4/: Assignment4.py
Perception/: BinaryImageAnalysis.md  Deep Learning.ipynb  EdgeDetection.md  MachineLearning.md  Numpy.ipynb  Presentation.key  documentation.md
Perception/.ipynb_checkpoints/: Checkpoint 3-checkpoint.ipynb  Numpy-checkpoint.ipynb
Perception/Checkpoint 1 and 2/: Assignment.py  test.md
Perception/Checkpoint 3/: Checkpoint 3.md  Checkpoint 3.py  forecast.csv
Perception/MachineLearning/: Linear Regression.ipynb  MachineLearning.md
Perception/MachineLearning/.ipynb_checkpoints/: Logistic Regression-checkpoint.ipynb
SLAM/: Checkpoint 1.md  KalmanFilter.md  Presentation.key  RViz.md  SensorFusion.md  Week1.md
SLAM/EKF/: EKF.md
SLAM/ExtraAssignment/: car_visualizer.py  cone_visualizer.py
SysInt/: CANdoc.md  CarMaker.md  MRPT.md  Perception_codebase_doc.md  docker.md  documentation.html  documentation.md  ros1_bridge.md  ros2.md  ros2_errors.md  tf.md  ubuntu_doc.md
SysInt/CAN/: 1.py  2.py  CANdoc.md  motohawk.dbc  receiver.py  sender.py
SysInt/Checkpoint 2/: Cone.msg
SysInt/Checkpoint 3/: velocity.msg
SysInt/Checkpoint 4/: log.txt
SysInt/Checkpoints/: Assignment.docx
SysInt/Checkpoints/Checkpoint 2/: Triangulation.py
SysInt/Checkpoints/Checkpoint 3/: SLAM.py  position.msg  yaw.msg
SysInt/Checkpoints/Checkpoint 4/: CAN.py
SysInt/Checkpoints/Handshake_Assignment_ROS/: AI.py
SysInt/Handshake_Assignment_ROS/: VCU.py
adas-api-main/: .gitignore  CMakeLists.txt  README.md  demo.cpp  setup_can.sh  setup_vcan.sh
adas-api-main/docs/: candata.dbc  steering_feedback.txt  steering_request.txt
adas-api-main/include/: README.md  adas.hpp  calibration.hpp  can_wrap.hpp  candata.h  control_frames.hpp  demo_ui.hpp  simple_adas.hpp  status_frames.hpp
adas-api-main/include/control/: axle_control_frame.hpp  brake_control_frame.hpp  control_frame.hpp  status_control_frame.hpp  steering_control_frame.hpp
adas-api-main/include/log/: ai2log_dynamics2.hpp  log_dynamics1_frame.hpp  status_frame.hpp
adas-api-main/include/status/: axle_torque_frame.hpp  brake_frame.hpp  process_frame.hpp  status_frame.hpp  steering_frame.hpp  wheel_counts_frame.hpp  wheel_speeds_frame.hpp
adas-api-main/src/: adas.cpp  control_frames.cpp  demo.cpp  demo_ui.cpp  example_calibration.cpp  example_control.cpp  example_frame_reader.cpp  example_straight_line.cpp  example_threaded.cpp  example_wiggle.cpp  simple_adas.cpp  status_frames.cpp
adas-api-main/src/control/: axle_control_frame.cpp  brake_control_frame.cpp  control_frame.cpp  status_control_frame.cpp  steering_control_frame.cpp
adas-api-main/src/status/: axle_torque_frame.cpp  brake_frame.cpp  process_frame.cpp  status_frame.cpp  steering_frame.cpp  wheel_counts_frame.cpp  wheel_speeds_frame.cpp
